<resources>
    <string name="app_name">ElectricCarFinancing</string>
    <string name="action_settings">Settings</string>
    <string name="txtTitle">Electric Car Financing</string>
    <string name="hint1">Number of Years</string>
    <string name="hint2">Car Loan Amount</string>
    <string name="hint3">Interest Rate</string>
    <string name="btnPayment">Car Payment</string>
    <string name="imgDescription">Number of Years Image</string>
    <string name="txtPayment">Monthly Payment</string>
    <string name="title_activity_payment">Monthly Payment</string>
</resources>
