<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.androidbootcamp.electriccarfinancing.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:text="@string/txtTitle"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal= "true"
        android:textSize="32sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtYears"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal= "true"
        android:layout_marginTop= "20dp"
        android:textSize="25sp"
        android:hint = "@string/hint1" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtLoan"
        android:layout_below="@+id/txtYears"
        android:layout_centerHorizontal= "true"
        android:layout_marginTop= "20dp"
        android:textSize="25sp"
        android:hint = "@string/hint2" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtInterest"
        android:layout_below="@+id/txtLoan"
        android:layout_centerHorizontal= "true"
        android:layout_marginTop= "20dp"
        android:textSize="25sp"
        android:hint = "@string/hint3" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPayment"
        android:id="@+id/btnPayment"
        android:layout_below="@+id/txtInterest"
        android:layout_centerHorizontal= "true"
        android:layout_marginTop = "28dp"
        android:textSize="35sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgOpening"
        android:layout_below="@+id/btnPayment"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/opening"
        android:layout_marginTop="5dp" />

</RelativeLayout>
